--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8">
   <title>WatchNote!</title>
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="assets/css/photon.css">
   <link rel="stylesheet" href="bundle.css">
   </head>
