--- a/public/popup.html
+++ b/public/popup.html
@@ -5,7 +5,7 @@
   <title>WatchNote!</title>
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="assets/css/photon.css">
-  <link rel="stylesheet" href="bundle.css">
+  <link rel="stylesheet" href="common.css">
   </head>
   <body>
   <div id="app"></div>
@@ -13,6 +13,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.25.0/ramda.min.js"></script>
   <script src="assets/js/log4js.min.js"></script>
   <script src="assets/js/jsonp.js"></script>
-  <script src="bundle.js"></script>
+  <script src="common.js"></script>
+  <script src="app.bundle.js"></script>
   </body>
 </html>
