--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 </head>
-<body style="width:780px; height:580px; ">
+<body style="width:780px; height:470px; text-align:center">
 <iframe src="http://localhost:8080" width="100%" height="100%"
     frameborder="0">
 </iframe>
+<a href="login.html">"Auto login & user excahge for YAHOO! Auction" is here!</a>
 </body>
 </html>
