--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body style="width:780px; height:470px; text-align:center">
-<iframe src="http://localhost:8080" width="100%" height="100%"
+<iframe src="http://tk2-402-42441.vs.sakura.ne.jp/" width="100%" height="100%"
     frameborder="0">
 </iframe>
 <a href="login.html">"Auto login & user excahge for YAHOO! Auction" is here!</a>
