--- a/public/yconnect.html
+++ b/public/yconnect.html
@@ -18,8 +18,8 @@ window.yconnectInit = function() {
       className: "yconnectLogin"
     },
     authorization: {
-      clientId: "dj00aiZpPVBTNWhlcGVhV3RFZyZzPWNvbnN1bWVyc2VjcmV0Jng9ODQ-",
-      redirectUri: "http://tk2-402-42441.vs.sakura.ne.jp",
+      clientId: "dj00aiZpPUVGajc3Z3V0Sml6TiZzPWNvbnN1bWVyc2VjcmV0Jng9YjE-",
+      redirectUri: "http://localhost:8080",
       scope: "openid",
       windowWidth: "500",
       windowHeight: "400",
