--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,6 +6,6 @@
 <iframe src="http://tk2-402-42441.vs.sakura.ne.jp/" width="100%" height="100%"
     frameborder="0">
 </iframe>
-<a href="login.html">"Auto login & user excahge for YAHOO! Auction" is here!</a>
+<a href="login.html">"Auto login &amp; User switcing for YAHOO! Auction" is here!</a>
 </body>
 </html>
